<resources>
    <string name="app_name">KRD_Hackaton</string>
    <string name="stworz_harmonogram_przycisk">Stwórz harmonogram</string>
    <string name="back_button">Wstecz</string>
    <string name="button_take">Zrób zdjęcie</string>
    <string name="menu_button">Menu</string>
    <string name="next_button">Dalej</string>
    <string name="generate">Generuj</string>
    <string name="edit">Edytuj</string>
    <string name="add_income">Dodaj przychód</string>
    <string name="date">Data: </string>
    <string name="value">Wartość: </string>
    <string name="save">Zapisz</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ok">OK</string>
    <string name="make">Stwórz</string>
    <string name="due_date">Termin: </string>
    <string name="interest">Odsetki: </string>
    <string name="creditor">Wierzyciel: </string>
    <string name="payment_strategy">Oto Twoja najlepsza kolejność spłat:</string>
    <string name="sum_to_pay">Suma do spłaty:</string>
    <string name="date_of_last_payment">Data spłacenia</string>
    <string name="show_plan">Pokaż harmonogram</string>
    <string name="debts_list">Lista długów</string>
    <string name="creditors_list">Lista wierzycieli</string>
    <string name="skip">Pomiń</string>
    <string name="camera">Zdjęcie</string>
</resources>
