<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="com.example.lukasz.krd_hackaton.ResultActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/payment_strategy"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/payments_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView8"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/date_of_last_payment"
        android:layout_alignParentStart="true"
        android:text="@string/sum_to_pay"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sum_to_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:layout_below="@+id/payments_list"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/date_of_last_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_above="@+id/button10"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="onMenuClick"
        android:text="@string/menu_button" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/date_of_last_payment"
        android:layout_alignBottom="@+id/date_of_last_payment"
        android:layout_alignParentStart="true"
        android:text="@string/date_of_last_payment"
        android:textSize="15sp" />
</RelativeLayout>
