<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lukasz.krd_hackaton.IncomeDeatilsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="139dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView"
            android:text="@string/date"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <EditText
            android:id="@+id/income_year"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="yyyy"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <EditText
            android:id="@+id/income_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="mm"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/value"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:onClick="onSaveClick"
        android:text="@string/save"/>

</RelativeLayout>
